Range selector component implementation (#2)

--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -37,7 +37,7 @@ $padding: 50px;
 
         .dx-logo {
             float: right;
-            background: url("/assets/images/dx-logo.png") no-repeat;
+            background: url(/assets/images/dx-logo.png) no-repeat;
             margin-top: 6px;
             width: 160px;
             height: 30px;
