--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -45,7 +45,7 @@ $padding: 50px;
             margin-top: 24px;
             display: block;
             float: left;
-            background: url("/assets/images/logo.png") no-repeat;
+            background: url(/assets/images/logo.png) no-repeat;
         }
 
         nav {
