--- a/src/app/views/dashboard/channels/channels.component.html
+++ b/src/app/views/dashboard/channels/channels.component.html
@@ -1,3 +1,9 @@
-<p>
-    channels works!
-</p>
+<div>
+    <app-caption caption="REVENUE BY SALES CHANNELS" [legend]="true"></app-caption>
+    <app-daily-channels></app-daily-channels>
+
+    <div class="gray-line">
+        <app-sales-by-range category="CHANNEL"></app-sales-by-range>
+    </div>
+    <div class="gray-line empty"></div>
+</div>
