Add the name of selected child to dashboard menu (#5)

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -12,7 +12,7 @@
                 selectionMode="none"
             >
                 <div *dxTemplate="let i of 'item'">
-                    <a *ngIf="i.data" routerLink={{i.data.link}} routerLinkActive="selected" class="menu-item">{{i.data.title}}</a>
+                    <a *ngIf="i.data" routerLink={{i.data.link}} routerLinkActive="selected" class="menu-item">{{i.data.title}}{{ selectedChild(i) }}</a>
                 </div>
             </dx-menu>
             <div class="help">
