--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -8,7 +8,7 @@ $padding: 50px;
     padding: 0;
 }
 
-::ng-deep {
+::ng-deep .top-menu {
     .dx-context-menu-container-border {
         border: none;
     }
