--- a/src/app/views/products/products.component.html
+++ b/src/app/views/products/products.component.html
@@ -1,3 +1,21 @@
-<p>
-    products works!
-</p>
+<app-caption caption="PRODUCTS"></app-caption>
+<div class="data-grid">
+    <app-products-grid (onChange)="productChanged($event)"></app-products-grid>
+</div>
+<div class="gray-line">
+    <div class="product-info">
+        <div class="info">
+            <app-products-info [product]="product"></app-products-info>
+        </div>
+        <div class="charts">
+            <div class="products-pie-container">
+                <app-products-chart category="sector" [productId]="productId" [range]="range"></app-products-chart>
+                <app-products-chart category="region" [productId]="productId" [range]="range"></app-products-chart>
+                <app-products-chart category="channel" [productId]="productId" [range]="range"></app-products-chart>
+            </div>
+            <div class="range-selector">
+                <app-rangeselector shutterColor="#f5f5f5" (onChange)="rangeChanged($event)"></app-rangeselector>
+            </div>
+        </div>
+    </div>
+</div>
