Fix prev/next buttons for FF, pie size, menu (#14)

--- a/src/app/components/rangeselector/rangeselector.component.scss
+++ b/src/app/components/rangeselector/rangeselector.component.scss
@@ -8,6 +8,7 @@
         width: 30px;
         height: 30px;
         position: absolute;
+        z-index: 1;
         top: 30px;
         background-size: 24px 24px;
         background-repeat: no-repeat;
