--- a/src/app/components/sales-by-range/sales-by-range.component.html
+++ b/src/app/components/sales-by-range/sales-by-range.component.html
@@ -5,6 +5,7 @@
             type="doughnut"
             [innerRadius]="0.62"
             [dataSource]="pieDataSource"
+            [minDiameter]="0.7"
         >
             <dxo-loading-indicator text=""></dxo-loading-indicator>
             <dxo-legend [visible]="false"></dxo-legend>
